--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "2c500389-19f0-49fc-98e9-e7970596f0fb"
   },
   "newProjectRoot": "projects",
   "projects": {
